
plugins {
    id 'com.gtnewhorizons.gtnhconvention'
    id 'org.jetbrains.kotlin.jvm'
}

minecraft {
    def cleanVersion = project.modVersion.toString().split('-')[0].split('\\+')[0]

    injectedTags.put("VERSION", cleanVersion)

    injectedTags.put("RAW_VERSION", project.modVersion)
    injectedTags.put("MC_VERSION", project.minecraftVersion)
    injectedTags.put("MOD_ID", project.modId)
    injectedTags.put("MOD_NAME", project.modName)
    injectedTags.put("MOD_GROUP", project.modGroup)
}
repositories {
    mavenCentral()
}
dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}
kotlin {
    jvmToolchain(25)
}
